Fixing z-index on Navbar

--- a/app/assets/stylesheets/manager/navbar.scss
+++ b/app/assets/stylesheets/manager/navbar.scss
@@ -9,6 +9,7 @@
   align-items: center;
   padding: 0 40px;
   background: #fff;
+  z-index: 1;
 
   .navigation {
     font-size: 36px;
